[project]
name = "tana-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pyperclip>=1.11.0",
    "pytest>=9.0.1",
    "requests>=2.32.3",
    "things.py",
]

[tool.pytest.ini_options]
# Only collect tests from the current directory, not from installed packages
testpaths = ["."]
norecursedirs = [".venv", "venv", "__pycache__", ".git", "site-packages"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
