[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "things-to-tana"
version = "0.1.0"
description = "Bi-directional sync: Things 3 ↔ Tana (clipboard or API)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "pyperclip>=1.11.0",
    "pytest>=9.0.1",
    "requests>=2.32.3",
    "things.py",
]

[project.scripts]
things-to-tana = "things_to_tana:main"
tana-to-things = "tana_to_things:main"

[tool.setuptools]
py-modules = [
    "things_to_tana",
    "tana_to_things",
    "main",
    "sync_service",
    "tana_client",
    "tana_formatter",
    "tana_parser",
    "things_provider",
    "things_url_generator",
    "models",
    "config",
    "history_manager",
]

[tool.pytest.ini_options]
# Only collect tests from the current directory, not from installed packages
testpaths = ["."]
norecursedirs = [".venv", "venv", "__pycache__", ".git", "site-packages"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
